<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dagustech.nemotec.CalcActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/calc_edtnum1"
        android:hint="@string/numero1"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/calc_edtnum2"
        android:layout_marginBottom="24dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/calc_edtnum2"
        android:hint="@string/numero2"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button12"
        android:layout_marginBottom="48dp" />

    <Button
        android:text="@string/mas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button12"
        android:onClick="sumar"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button13"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button14"
        android:layout_marginBottom="40dp"
        app:layout_constraintHorizontal_bias="0.45" />

    <Button
        android:text="@string/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button13"
        android:onClick="restar"
        android:layout_marginEnd="48dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/calc_edtnum2" />

    <Button
        android:text="@string/x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button14"
        android:onClick="multiplicar"
        android:layout_marginStart="56dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="104dp"
        app:layout_constraintRight_toLeftOf="@+id/button15"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.19" />

    <Button
        android:text="@string/div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button15"
        android:onClick="dividir"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="104dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button13"
        app:layout_constraintVertical_bias="0.84000003" />

    <TextView
        android:text="@string/calcnemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView18"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/calc_edtnum1"
        android:layout_marginBottom="8dp" />
</android.support.constraint.ConstraintLayout>
