<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_p1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dagustech.nemotec.P1Activity">

    <TextView
        android:text="@string/p1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/p1_texttitulo"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/p1_textpreg"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.19" />

    <TextView
        android:text="@string/preg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/p1_textpreg"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/p1_image"
        android:layout_marginBottom="24dp" />

    <ImageView
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/bruselas"
        android:id="@+id/p1_image"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/image_brus"
        app:layout_constraintHorizontal_bias="0.85"
        android:layout_width="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/p1_b"
        android:layout_marginBottom="48dp" />

    <Button
        android:text="@string/p1_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/p1_a"
        android:visibility="visible"
        android:onClick="regresaruno"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/p1_image"
        android:layout_marginStart="56dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:text="@string/p1_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/p1_b"
        android:visibility="visible"
        android:onClick="irA2"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/p1_a"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="96dp"
        app:layout_constraintHorizontal_bias="0.62" />

    <Button
        android:text="@string/sig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/p1_botonsig"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/p1_a"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="0.6"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/p1_botonatras"
        app:layout_constraintHorizontal_bias="0.78" />

    <Button
        android:text="@string/atras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/p1_botonatras"
        android:layout_marginStart="64dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/p1_a"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />
</android.support.constraint.ConstraintLayout>
