<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_landing2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dagustech.nemotec.Landing2Activity">

    <TextView
        android:text="@string/juegacomo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/landing2_name"
        android:layout_marginBottom="8dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/landing2_name"
        android:hint="@string/nombre"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        android:layout_marginBottom="8dp" />

    <TextView
        android:text="@string/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        android:layout_marginBottom="136dp" />

    <Button
        android:text="@string/iniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="visible"
        android:onClick="preguntaunoo"
        android:layout_marginBottom="40dp" />

    <ImageView
        android:layout_width="308dp"
        android:layout_height="70dp"
        app:srcCompat="@drawable/nemoteclogo"
        android:id="@+id/imageView4"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.87"
        android:contentDescription="@string/logo" />

</android.support.constraint.ConstraintLayout>
